# lab9-task3

./: .gitignore  CMakeLists.txt  Main.qml  MediaPlayerBackend.cpp  MediaPlayerBackend.h  PlatformUI.qml  PlayerControls.qml  README.md  TrackList.qml  main.cpp  server.py
.github/workflows/: main.yml
tests/: test_backend.cpp
